<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Comment this ImageView after you have handled the image background with Java at the Activity-->
    <ImageView
        android:id="@+id/formBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textlogo"
        android:text="@string/need_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formLogo"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textlogo"
        android:src="@color/ic_launcher_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/trans_white_rectangle"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:hint="@string/has_an_account"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <AutoCompleteTextView
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"

                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_white"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:hint="@string/email_edit"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"

                    android:inputType="textEmailAddress"
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_white"
                    android:drawableStart="@drawable/ic_pass_icon"
                    android:drawablePadding="5dp"
                    android:hint="@string/password_edit"
                    android:textSize="14sp"
                    />

                <Button
                    android:id="@+id/loginNow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/register_button"
                    android:text="@string/sign_in_btn"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/sign_up_text"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/signUpNow"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/sign_up_link"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@drawable/trans_white_rectangle"
                android:orientation="vertical">



            </LinearLayout>


            <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingTop="5dp"-->
            <!--android:text="او بتقدر تكمل بحساب الفيس بوك"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold"-->

            <!--/>-->


            <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingTop="5dp"-->
            <!--android:text="او اعمل حساب عن طريق الايميل"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold"-->

            <!--/>-->


        </LinearLayout>

    </ScrollView>
</RelativeLayout>